-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: core-libs
The GeneratedMethodAccessor for a reflective call to TestNewAcmp.testEq02_1 contains an incorrect cast to LMyValue1 instead of QMyValue1, leading to JIT crashes (JDK-8270352) because the generated bytecode is not verified:
45 checkcast 16 <compiler/valhalla/inlinetypes/MyValue1> 0
256 bci: 45 ReceiverTypeData count(0) nonprofiled_count(0) entries(1)
'compiler/valhalla/inlinetypes/MyValue1'(5120 1,00)
48 invokevirtual 10 <compiler/valhalla/inlinetypes/TestNewAcmp.testEq02_1(Qcompiler/valhalla/inlinetypes/MyValue1;Qcompiler/valhalla/inlinetypes/MyValue1;)Z>
312 bci: 48 VirtualCallData count(0) nonprofiled_count(0) entries(1)
'compiler/valhalla/inlinetypes/TestNewAcmp'(5120 1,00)
argument types 0: stack(1) 'compiler/valhalla/inlinetypes/MyValue1'
1: stack(2) 'compiler/valhalla/inlinetypes/MyValue1'
51 invokestatic 52 <java/lang/Boolean.valueOf(Z)Ljava/lang/Boolean;>
The following change "fixes" the problem:
index 72bc6eb6e63..c34ce441441 100644
--- a/src/java.base/share/classes/jdk/internal/reflect/MethodAccessorGenerator.java
+++ b/src/java.base/share/classes/jdk/internal/reflect/MethodAccessorGenerator.java
@@ -341,7 +341,7 @@ class MethodAccessorGenerator extends AccessorGenerator {
for (int i = 0; i < parameterTypes.length; i++) {
Class<?> c = parameterTypes[i];
if (!isPrimitive(c)) {
- asm.emitConstantPoolUTF8(getClassName(c, false));
+ asm.emitConstantPoolUTF8(getClassName(c, true));
asm.emitConstantPoolClass(asm.cpi());
}
}
45 checkcast 16 <Qcompiler/valhalla/inlinetypes/MyValue1;> 1
256 bci: 45 ReceiverTypeData count(0) nonprofiled_count(0) entries(1)
'compiler/valhalla/inlinetypes/MyValue1'(5120 1,00)
48 invokevirtual 10 <compiler/valhalla/inlinetypes/TestNewAcmp.testEq02_1(Qcompiler/valhalla/inlinetypes/MyValue1;Qcompiler/valhalla/inlinetypes/MyValue1;)Z>
312 bci: 48 VirtualCallData count(0) nonprofiled_count(0) entries(1)
'compiler/valhalla/inlinetypes/TestNewAcmp'(5120 1,00)
argument types 0: stack(1) 'compiler/valhalla/inlinetypes/MyValue1'
1: stack(2) 'compiler/valhalla/inlinetypes/MyValue1'
45 checkcast 16 <compiler/valhalla/inlinetypes/MyValue1> 0
256 bci: 45 ReceiverTypeData count(0) nonprofiled_count(0) entries(1)
'compiler/valhalla/inlinetypes/MyValue1'(5120 1,00)
48 invokevirtual 10 <compiler/valhalla/inlinetypes/TestNewAcmp.testEq02_1(Qcompiler/valhalla/inlinetypes/MyValue1;Qcompiler/valhalla/inlinetypes/MyValue1;)Z>
312 bci: 48 VirtualCallData count(0) nonprofiled_count(0) entries(1)
'compiler/valhalla/inlinetypes/TestNewAcmp'(5120 1,00)
argument types 0: stack(1) 'compiler/valhalla/inlinetypes/MyValue1'
1: stack(2) 'compiler/valhalla/inlinetypes/MyValue1'
51 invokestatic 52 <java/lang/Boolean.valueOf(Z)Ljava/lang/Boolean;>
The following change "fixes" the problem:
index 72bc6eb6e63..c34ce441441 100644
--- a/src/java.base/share/classes/jdk/internal/reflect/MethodAccessorGenerator.java
+++ b/src/java.base/share/classes/jdk/internal/reflect/MethodAccessorGenerator.java
@@ -341,7 +341,7 @@ class MethodAccessorGenerator extends AccessorGenerator {
for (int i = 0; i < parameterTypes.length; i++) {
Class<?> c = parameterTypes[i];
if (!isPrimitive(c)) {
- asm.emitConstantPoolUTF8(getClassName(c, false));
+ asm.emitConstantPoolUTF8(getClassName(c, true));
asm.emitConstantPoolClass(asm.cpi());
}
}
45 checkcast 16 <Qcompiler/valhalla/inlinetypes/MyValue1;> 1
256 bci: 45 ReceiverTypeData count(0) nonprofiled_count(0) entries(1)
'compiler/valhalla/inlinetypes/MyValue1'(5120 1,00)
48 invokevirtual 10 <compiler/valhalla/inlinetypes/TestNewAcmp.testEq02_1(Qcompiler/valhalla/inlinetypes/MyValue1;Qcompiler/valhalla/inlinetypes/MyValue1;)Z>
312 bci: 48 VirtualCallData count(0) nonprofiled_count(0) entries(1)
'compiler/valhalla/inlinetypes/TestNewAcmp'(5120 1,00)
argument types 0: stack(1) 'compiler/valhalla/inlinetypes/MyValue1'
1: stack(2) 'compiler/valhalla/inlinetypes/MyValue1'
- causes
-
JDK-8378697 [lworld] Remove jdk/internal/reflect hack for ClassFileParser::verify_legal_class_name
-
- Resolved
-
- duplicates
-
JDK-8270352 [lworld] C2 compilation fails with assert(is_InlineType()) failed: invalid node class: CheckCastPP
-
- Closed
-
- relates to
-
JDK-8270852 [lworld] bytecodes spinned at runtime should set minor_version to 65535 if preview feature enabled
-
- Resolved
-
-
JDK-8267948 [lworld] Core reflection and method handles support for L/Q model
-
- Resolved
-
(1 links to)