8270350: [lworld] GeneratedMethodAccessor contains incorrect cast

Reviewed-by: hseigel